// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden plan > compiles the 50-position fixture to a stable program 1`] = `
{
  "aggKeys": [
    "1010|610000",
    "1010|611000",
    "1010|620000",
    "1010|621000",
    "1010|622000",
    "1010|628800",
    "1010|623000",
    "1010|624000",
    "1010|625000",
    "1010|630000",
    "1010|972000",
    "1010|972540",
    "1010|971000",
    "1010|612000",
    "1010|626000",
    "1010|627000",
    "1010|628000",
    "1010|628100",
    "1010|628150",
    "1010|628200",
    "1010|628400",
    "1010|628500",
    "1010|628600",
    "1010|628700",
    "1010|628300",
    "1010|971100",
    "1010|629000",
    "1010|629100",
    "1010|629200",
    "1010|629300",
    "1010|628900",
    "1010|628950",
    "1010|628970",
    "1910|610000",
    "1910|611000",
    "1910|620000",
    "1910|621000",
    "1910|622000",
    "1910|628800",
    "1910|623000",
    "1910|624000",
    "1910|625000",
    "1910|630000",
    "1910|972000",
    "1910|972540",
    "1910|971000",
    "1910|612000",
    "1910|626000",
    "1910|627000",
    "1910|628000",
    "1910|628100",
    "1910|628150",
    "1910|628200",
    "1910|628400",
    "1910|628500",
    "1910|628600",
    "1910|628700",
    "1910|628300",
    "1910|971100",
    "1910|629000",
    "1910|629100",
    "1910|629200",
    "1910|629300",
    "1910|628900",
    "1910|628950",
    "1910|628970",
    "1310|610000",
    "1310|611000",
    "1310|620000",
    "1310|621000",
    "1310|622000",
    "1310|628800",
    "1310|623000",
    "1310|624000",
    "1310|625000",
    "1310|630000",
    "1310|972000",
    "1310|972540",
    "1310|971000",
    "1310|612000",
    "1310|626000",
    "1310|627000",
    "1310|628000",
    "1310|628100",
    "1310|628150",
    "1310|628200",
    "1310|628400",
    "1310|628500",
    "1310|628600",
    "1310|628700",
    "1310|628300",
    "1310|971100",
    "1310|629000",
    "1310|629100",
    "1310|629200",
    "1310|629300",
    "1310|628900",
    "1310|628950",
    "1310|628970",
  ],
  "arg0": "4584:cd093c08",
  "buyoutAggRow": "0:811c9dc5",
  "buyoutValues": "0:811c9dc5",
  "countScaled": [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
  ],
  "daysPerMonth": "600:c41ad637",
  "defCount": 33,
  "defsInEmissionOrder": [
    "def-base",
    "def-accrual",
    "def-pension",
    "def-indemnity",
    "def-housing",
    "def-multblockrate",
    "def-transport",
    "def-custom",
    "def-overtime",
    "def-ss",
    "def-hc",
    "def-fte",
    "def-hours",
    "def-bankhol",
    "def-flatmonthly",
    "def-vacweighted",
    "def-multdays",
    "def-multrealdays",
    "def-multholdays",
    "def-multvac",
    "def-multservice",
    "def-multservicetotal",
    "def-weightedservice",
    "def-multtiered",
    "def-multhours",
    "def-hourspaid",
    "def-combadd",
    "def-combsub",
    "def-combmul",
    "def-costperhour",
    "def-thirteenth",
    "def-fourteenth",
    "def-weekdays",
  ],
  "holidayDays": "12:afaac7a5",
  "instructionCount": 4584,
  "lineAggRow": "1650:954ccf72",
  "lineCount": 1650,
  "op": "4584:73d0c32f",
  "outLine": "4584:3dca623d",
  "paramOfs": "4584:a4b362d1",
  "paramPool": "10931:c697aeee",
  "paramPoolLength": 10931,
  "posFte": "50:1f53b1ca",
  "posHeadcount": "50:996eed40",
  "posWeight": "50:97ab0e3d",
  "positionCount": 50,
  "positionInstrStart": "51:26aff714",
  "positionStatRow": "50:a3445784",
  "realDays": "12:3b880df7",
  "seasonality": "600:84f92b9b",
  "statKeys": [
    "F&B|Manager Salaried Pay",
    "Admin|Associate Hourly Pay",
    "F&B|Associate Hourly Pay",
    "Rooms|Manager Salaried Pay",
    "Admin|Casual Hourly Pay",
    "Rooms|Associate Hourly Pay",
    "Admin|Manager Salaried Pay",
    "Rooms|Casual Hourly Pay",
    "F&B|Casual Hourly Pay",
  ],
}
`;

exports[`golden plan > compiles the 200-position fixture to a stable program 1`] = `
{
  "aggKeys": [
    "1010|610000",
    "1010|611000",
    "1010|620000",
    "1010|621000",
    "1010|622000",
    "1010|628800",
    "1010|623000",
    "1010|624000",
    "1010|625000",
    "1010|630000",
    "1010|972000",
    "1010|972540",
    "1010|971000",
    "1010|612000",
    "1010|626000",
    "1010|627000",
    "1010|628000",
    "1010|628100",
    "1010|628150",
    "1010|628200",
    "1010|628400",
    "1010|628500",
    "1010|628600",
    "1010|628700",
    "1010|628300",
    "1010|971100",
    "1010|629000",
    "1010|629100",
    "1010|629200",
    "1010|629300",
    "1010|628900",
    "1010|628950",
    "1010|628970",
    "1310|610000",
    "1310|611000",
    "1310|620000",
    "1310|621000",
    "1310|622000",
    "1310|628800",
    "1310|623000",
    "1310|624000",
    "1310|625000",
    "1310|630000",
    "1310|972000",
    "1310|972540",
    "1310|971000",
    "1310|612000",
    "1310|626000",
    "1310|627000",
    "1310|628000",
    "1310|628100",
    "1310|628150",
    "1310|628200",
    "1310|628400",
    "1310|628500",
    "1310|628600",
    "1310|628700",
    "1310|628300",
    "1310|971100",
    "1310|629000",
    "1310|629100",
    "1310|629200",
    "1310|629300",
    "1310|628900",
    "1310|628950",
    "1310|628970",
    "1910|610000",
    "1910|611000",
    "1910|620000",
    "1910|621000",
    "1910|622000",
    "1910|628800",
    "1910|623000",
    "1910|624000",
    "1910|625000",
    "1910|630000",
    "1910|972000",
    "1910|972540",
    "1910|971000",
    "1910|612000",
    "1910|626000",
    "1910|627000",
    "1910|628000",
    "1910|628100",
    "1910|628150",
    "1910|628200",
    "1910|628400",
    "1910|628500",
    "1910|628600",
    "1910|628700",
    "1910|628300",
    "1910|971100",
    "1910|629000",
    "1910|629100",
    "1910|629200",
    "1910|629300",
    "1910|628900",
    "1910|628950",
    "1910|628970",
  ],
  "arg0": "18300:1aa7ec58",
  "buyoutAggRow": "0:811c9dc5",
  "buyoutValues": "0:811c9dc5",
  "countScaled": [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
  ],
  "daysPerMonth": "2400:e54e4b78",
  "defCount": 33,
  "defsInEmissionOrder": [
    "def-base",
    "def-accrual",
    "def-pension",
    "def-indemnity",
    "def-housing",
    "def-multblockrate",
    "def-transport",
    "def-custom",
    "def-overtime",
    "def-ss",
    "def-hc",
    "def-fte",
    "def-hours",
    "def-bankhol",
    "def-flatmonthly",
    "def-vacweighted",
    "def-multdays",
    "def-multrealdays",
    "def-multholdays",
    "def-multvac",
    "def-multservice",
    "def-multservicetotal",
    "def-weightedservice",
    "def-multtiered",
    "def-multhours",
    "def-hourspaid",
    "def-combadd",
    "def-combsub",
    "def-combmul",
    "def-costperhour",
    "def-thirteenth",
    "def-fourteenth",
    "def-weekdays",
  ],
  "holidayDays": "12:ddef1598",
  "instructionCount": 18300,
  "lineAggRow": "6600:467cfbe1",
  "lineCount": 6600,
  "op": "18300:4d21dfbd",
  "outLine": "18300:48b0394e",
  "paramOfs": "18300:37606809",
  "paramPool": "43866:151df87d",
  "paramPoolLength": 43866,
  "posFte": "200:20848a50",
  "posHeadcount": "200:95595628",
  "posWeight": "200:0bb17c8d",
  "positionCount": 200,
  "positionInstrStart": "201:1cb8c084",
  "positionStatRow": "200:927f312d",
  "realDays": "12:2ddc8778",
  "seasonality": "2400:7ed04d2e",
  "statKeys": [
    "Rooms|Manager Salaried Pay",
    "Rooms|Casual Hourly Pay",
    "Rooms|Associate Hourly Pay",
    "F&B|Manager Salaried Pay",
    "Admin|Associate Hourly Pay",
    "Admin|Manager Salaried Pay",
    "F&B|Associate Hourly Pay",
    "F&B|Casual Hourly Pay",
    "Admin|Casual Hourly Pay",
  ],
}
`;
